--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='/normalize.css'>
+	<link rel='stylesheet' href='style.css'>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="/icons.css" rel="stylesheet">
+
 
 	<script defer src='/build/bundle.js'></script>
 </head>
