--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,16 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>Portafolio</title>
+<link rel="manifest" href="/manifest.json">
+<meta name="description" content="Svelte PWA starter template">
+<meta name="theme-color" content="#2F3BA2" />
+
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-title" content="Svelte PWA">
+<link rel="apple-touch-icon" href="/images/icons/icon-152x152.png">
+
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel='stylesheet' href='/global.css'>
