--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
 
     <title>Portafolio</title>
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="description" content="Svelte PWA starter template" />
-    <meta name="theme-color" content="#2F3BA2" />
+    <link rel="manifest" href="/manifest.json"/>
+    <meta name="description" content="Portafolio Jhon"/>
+    <meta name="theme-color" content="#2F3BA2"/>
 
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-mobile-web-app-title" content="Svelte PWA" />
-    <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-title" content="Portafolio"/>
+    <link rel="apple-touch-icon" href="/images/icons/icon-152x152.png"/>
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="stylesheet" href="/global.css" />
-    <link rel="stylesheet" href="/build/bundle.css" />
-    <link rel="stylesheet" href="/normalize.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="/favicon.png"/>
+    <link rel="stylesheet" href="css/global.css"/>
+    <link rel="stylesheet" href="/build/bundle.css"/>
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+            rel="stylesheet"
     />
-    <link href="/icons.css" rel="stylesheet" />
+    <link href="images/icons/icon-128x128.png" rel="stylesheet"/>
+
 
     <script defer src="/build/bundle.js"></script>
-  </head>
 
-  <body></body>
+</head>
+
+<body></body>
 </html>
